# Animations

./: .gitignore  README.md  animation_brief.md  manim.cfg  pyproject.toml  update_brief.md
media/Tex/: 01240916d13e7c03.tex  016219ff7565a714.tex  018d87c840477efd.tex  01b1a9ebcf318a39.tex  059802f6bf26ab1d.tex  09cacfff76db2b15.tex  0a25de8fe822b1b3.tex  0c4259fd6a4d7b7a.tex  0d30499834d88d24.tex  0e2d1c33dcd8ad34.tex  0f057e1eaca44c9f.tex  112d7061ed983f2e.tex  11fbe7553439602c.tex  15424b2af8436b3a.tex  155d116f963d61c2.tex  16774ffbd224cf28.tex  18234cec4d9022fc.tex  1c7d5b5b936cff31.tex  2294769aebc0e4ee.tex  235694926a484f7f.tex  2433fec7181e6abe.tex  26d870b08431a400.tex  28042a8a6cb246c0.tex  2b556ff1e7c7921e.tex  2e5f341f126925e4.tex  2f0a093d3860250e.tex  2f2a249af6a72b9d.tex  2fd51c4ee610df58.tex  3508fc8d22e28d44.tex  369e4379c02677b7.tex  3780a8ca2a2b8149.tex  39eef7a0e9722e0e.tex  3a88665a678545b7.tex  3a8f6a6cf23acdba.tex  3b8d475aeb09e2dc.tex  3cbfbc7a8cf8cb07.tex  3d60a9d81334cfb5.tex  4050e807e4f20aa0.tex  406497c0c2db2305.tex  41eaf2cf353bc69d.tex  (+119 more)
projects/01_voltage_divider/: README.md  scene.py
projects/01_voltage_divider/assets/circuit/: divider.tikz  divider_load.tikz  divider_mcu_leds.tikz  reg_mcu_leds.tikz
src/electroanim/: __init__.py  aesthetics.py  circuitikz.py  helpers.py  scene_base.py  tex.py
src/electronics_animations.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
